# chipper

./: .rustfmt.toml  Cargo.toml  LICENCE  README.md
.github/workflows/: rust.yml
src/: audio.rs  chip8.rs  emulator.rs  hardware.rs  main.rs  profile.rs  util.rs
