[package]
name = "chipper"
description = "A Chip-8/SuperChip/XoChip emulator"
version = "0.2.0"
authors = ["Ali Graham <ali.graham@gmail.com>"]
edition = "2021"
rust-version = "1.77"
readme = "README.md"
repository = "https://github.com/ali-graham/chipper"
license = "MIT"
publish = false

[dependencies]
anyhow = "1"
bitvec = "1"
clap = { version = "4", features = ["derive"]}
rand = "0.8"
sdl3 = "0.14.3"

