[package]
name = "chipper"
description = "A Chip-8/SuperChip/XoChip emulator"
version = "0.2.0"
authors = ["Ali Graham <ali.graham@gmail.com>"]
edition = "2024"
rust-version = "1.85"
readme = "README.md"
repository = "https://github.com/ali-graham/chipper"
license = "MIT"
publish = false

[dependencies]
anyhow = "1"
bitvec = "1"
clap = { version = "4", features = ["derive"]}
rand = "0.9"
sdl2 = "0.37"
